fixed overflow on inventory page header

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -142,15 +142,15 @@ p.header{
     margin-left: 20px !important;
 }
 
-.infoDiv{
-    width: 32em;
-    p.header{ 
-        border-top: none;
-        padding-top: 0 !important;
-        margin-top: 0 !important;
-        margin-left: 20px;
-     }
-}
+// .infoDiv{
+//     width: 32em;
+//     p.header{ 
+//         border-top: none;
+//         padding-top: 0 !important;
+//         margin-top: 0 !important;
+//         margin-left: 20px;
+//      }
+// }
 
 section.item {
     min-height: 5em;
